<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="231dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <EditText
        android:id="@+id/emailRegisterText"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="87dp"
        android:layout_marginEnd="88dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="275dp"
        android:text="@string/e_mail"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/emailRegisterText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/hasloRegisterText"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="88dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/RegisterButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="277dp"
        android:text="@string/hasloRegister"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/hasloRegisterText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailRegisterText" />

    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="235dp"
        android:layout_height="57dp"
        android:layout_marginStart="89dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="100dp"
        android:text="@string/zarejestruj_si"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/regulamintextview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hasloRegisterText" />

    <TextView
        android:id="@+id/regulamintextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="100dp"
        android:text="@string/accept_the_privacy_policy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterButton" />

</androidx.constraintlayout.widget.ConstraintLayout>