<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".Main3Activity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="231dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/LogoSzukaj"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <Spinner
        android:id="@+id/KrajSpinner"
        android:layout_width="281dp"
        android:layout_height="40dp"
        android:popupBackground="@android:color/darker_gray"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Spinner
        android:id="@+id/SpinnerRegion"
        android:layout_width="281dp"
        android:layout_height="40dp"
        android:layout_marginBottom="15dp"
        android:popupBackground="@android:color/darker_gray"
        ads:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintBottom_toTopOf="@+id/SzukajButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/SzukajButton"
        android:layout_width="235dp"
        android:layout_height="57dp"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="100dp"
        android:text="@string/szukaj"
        ads:layout_constraintTop_toBottomOf="@+id/SpinnerRegion"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/panstwo"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/KrajSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:text="@string/jednostka_administracyjna"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/SpinnerRegion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/KrajSpinner" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/WylogujButton"
        android:layout_width="71dp"
        android:layout_height="56dp"
        android:layout_marginStart="320dp"
        android:clickable="false"
        android:onClick="Wyloguj"
        app:backgroundTint="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SzukajButton"
        app:maxImageSize="36dp"
        app:srcCompat="@mipmap/ikonka_foreground" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-2923905637074345/3243596506"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>